<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.czarzap.cobromovil.add.Agregar"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:id="@+id/imageView"
        android:src="@mipmap/ic_sifi"
        android:layout_marginTop="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".375"
        android:contentDescription="@string/logo_sifi" />

    <Button
        android:layout_height="wrap_content"
        android:id="@+id/bContribuyente"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/propietario"
        android:drawableStart="@drawable/ic_contribuyente"
        android:background="@drawable/orange_blue_selector"
        android:textColor="@color/basic_item_bg"
        android:layout_marginTop="40dp"
        android:paddingStart="5dp"
        android:paddingEnd="20dp"
        android:layout_width="200dp" />

    <Button
        android:layout_height="wrap_content"
        android:id="@+id/bAComercio"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/comercio"
        android:drawableStart="@drawable/ic_comercio"
        android:background="@drawable/orange_blue_selector"
        android:textColor="@color/basic_item_bg"
        android:layout_marginTop="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="20dp"
        android:layout_width="200dp" />

</LinearLayout>