<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/configurar_impresora"
        android:id="@+id/textView"
        android:textSize="25dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_weight="0.03"
        android:layout_marginTop="50dp"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/port_type"
                android:textSize="@dimen/text_size_normal" />

            <RadioGroup
                android:id="@+id/rg_heat_sensitive_setting_connect_mode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <RadioButton
                    android:id="@+id/rb_heat_sensitive_setting_bluetooth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:button="@null"
                    android:checked="true"
                    android:drawableLeft="@drawable/round_checked_state_selector"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/bluetooth"
                    android:textSize="22dp"
                    android:drawablePadding="5dp" />

                <RadioButton
                    android:id="@+id/rb_heat_sensitive_setting_usb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableLeft="@drawable/round_checked_state_selector"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/usb"
                    android:textSize="22dp" />

            </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/heat_sensitive_setting_connect_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/stroke_gray_color"
                android:gravity="center"
                android:padding="6dp" />

            <TextView
                android:id="@+id/tv_heat_sensitive_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/orange_blue_selector"
                android:clickable="true"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="onClick"
                android:paddingBottom="0dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingTop="0dp"
                android:text="@string/connect"
                android:textColor="@color/basic_item_bg"
                android:textSize="26dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:textAlignment="center"
                android:singleLine="true"
                android:textIsSelectable="true" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>